--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homebridge-somneo",
+  "name": "homebridge-somneo-sensors",
   "version": "0.0.1",
   "description": "HomeBridge module for Philips Somneo sensor",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fototeddy/homebridge-somneo.git"
+    "url": "git+https://github.com/fototeddy/homebridge-somneo-sensors.git"
   },
   "keywords": [
     "homebridge-plugin",
@@ -39,7 +39,7 @@
   "author": "fototeddy <christopher.freifunk.wrg@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fototeddy/homebridge-somneo/issues"
+    "url": "https://github.com/fototeddy/homebridge-somneo-sensors/issues"
   },
-  "homepage": "https://github.com/fototeddy/homebridge-somneo#readme"
+  "homepage": "https://github.com/fototeddy/homebridge-somneo-sensors#readme"
 }
