gitignore and name and config correction version to 0.0.2 for clean usage in homebridge

--- a/config.sample.json
+++ b/config.sample.json
@@ -2,7 +2,7 @@
   "name": "Somneo",
   "accessory": "somneo",
   "json_data": "https://<SomneoIP>/di/v1/products/1/wusrd",
-  "SomneoModel": "CHX31",
+  "Somneo-Model": "CHX31",
   "update_interval_seconds": 60,
   "history": {
     "storage": "fs"
